--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,28 +5,24 @@ on:
 
 jobs:
   build:
-
-	runs-on: ubuntu-latest
-	defaults:
-	  run:
-		working-directory: angular
-
-	steps:
-	- name: Copy repos
-	- uses: actions/checkout@v3
+    runs-on: ubuntu-latest
+      steps:
+      
+      - name: Copy repos
+      - uses: actions/checkout@v3
 	
-	- name: Use Node.js 18.0.0
-	  uses: actions/setup-node@v3
+      - name: Use Node.js 18.0.0
+      - uses: actions/setup-node@v3
 	  with:
-		node-version: 18.0.0
-		cache: 'npm'
+          node-version: 18.0.0
+	    cache: 'npm'
 	
-	- name: Runnning npm ci
-	- run: npm ci
+      - name: Runnning npm ci
+      - run: npm ci
 	
-	- name: Running tests
-	- run: npm test
-	- run: npm lint
+      - name: Running tests
+      - run: npm test
+      - run: npm lint
 	
-	- name: Building app
-	- run: npm build
+      - name: Building app
+      - run: npm build
