--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,20 +9,20 @@ jobs:
       steps:
       
       - name: Copy repos
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 	
       - name: Use Node.js 18.0.0
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
 	  with:
           node-version: 18.0.0
 	    cache: 'npm'
 	
       - name: Runnning npm ci
-      - run: npm ci
+        run: npm ci
 	
       - name: Running tests
-      - run: npm test
-      - run: npm lint
+        run: npm test
+        run: npm lint
 	
       - name: Building app
-      - run: npm build
+        run: npm build
