--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,26 +1,52 @@
---- 
-jobs: 
-  build: 
-    runs-on: ubuntu-latest
-    steps: 
-      - 
-        name: "Copy repos"
-        uses: actions/checkout@v3
-      - 
-        name: "Use Node.js 18.0.0"
-        uses: actions/setup-node@v3
-        with: 
-          cache: npm
-          node-version: "18.0.0"
-      - 
-        name: "Runnning npm ci"
-        run: "npm ci"
-      - 
-        name: "Running tests"
-        run: "npm lint"
-      - 
-        name: "Building app"
-        run: "npm build"
 name: "Test Task CI"
-true: 
-  workflow_dispatch: ~
+on:
+  workflow_dispatch:
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Copy repos"
+        uses: actions/checkout@v3
+
+      - name: "Use Node.js 18.0.0"
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.0.0"
+
+      - name: "Install dependencies"
+        run: "npm install"
+        working-directory: ./angular
+
+      - name: Testing
+        run: "npm test"
+        working-directory: ./angular
+
+      - name: "Building app"
+        run: "npm build"
+        working-directory: ./angular
+
+      - name: "Log in to the Container registry"
+        uses: "docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9"
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: "Extract metadata (tags, labels) for Docker"
+        id: "meta"
+        uses: "docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38"
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: "Build and push Docker Image"
+        uses: "docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc"
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
