--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
         working-directory: ./angular
 
       - name: "Building app"
-        run: "npm build"
+        run: "npm run build"
         working-directory: ./angular
 
       - name: "Log in to the Container registry"
