--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,17 +17,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "18.5.0"
-      
-      - name: "Testing"
-        run: "npm run coverage"
-        working-directory: ./angular
 
       - name: "Install dependencies"
         run: "npm install"
         working-directory: ./angular
 
       - name: "Building app"
-        run: "npm run build"
+        run: "ng build"
         working-directory: ./angular
 
       - name: "Log in to the Container registry"
