--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: "browser-actions/setup-chrome@v0.0.0"
         
       - name: "Testing"
-        run: "npm run coverage"
+        run: "npm run test -- --no-watch --no-progress --browsers=Chrome"
         working-directory: ./angular
 
       - name: "Building app"
