--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,8 @@ jobs:
         working-directory: ./angular
         
       - name: "Install Chrome"
-        uses: "browser-actions/setup-chrome@v0.0.0"
+        uses: "browser-actions/setup-chrome@latest"
+      - run: "chrome --version"
         
       - name: "Testing"
         run: "npm run test -- --no-watch --no-progress --browsers=Chrome"
