--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
       - run: "chrome --version"
         
       - name: "Testing"
-        run: "npm run test -- --no-watch --no-progress --browsers=Chrome"
+        run: "CHROMIUM_BIN=$(which chrome) npm run test -- --no-watch --no-progress --browsers=Chrome"
         working-directory: ./angular
 
       - name: "Building app"
