--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,14 +22,8 @@ jobs:
         run: "npm install"
         working-directory: ./angular
         
-      - name: "Install Chrome"
-        uses: "browser-actions/setup-chrome@latest"
-        
-      - name: "Setting Path" 
-        run: "export CHROME_BIN=/opt/hostedtoolcache/chromium/latest/x64/chrome"
-        
       - name: "Testing"
-        run: "npm run test -- --no-watch --no-progress --browsers=Chrome"
+        run: "npm test -- --watch=false --browsers=ChromeHeadless"
         working-directory: ./angular
 
       - name: "Building app"
