--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,18 @@ jobs:
     needs: testing
     runs-on: ubuntu-latest
     steps:
+      - name: "Copy repos"
+        uses: actions/checkout@v1
+
+      - name: "Use Node.js 18.5.0"
+        uses: actions/setup-node@v1
+        with:
+          node-version: "18.5.0"
+
+      - name: "Install dependencies"
+        run: "npm install"
+        working-directory: ./angular
+        
       - name: "Building app"
         run: "npm run build"
         working-directory: ./angular
