--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,6 +80,9 @@ jobs:
         with:
           server_address: smtp.gmail.com
           server_port: 465
+          
+          username: ${{secrets.MAIL_USERNAME}}
+          password: ${{secrets.MAIL_PASSWORD}}
 
           subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
 
