--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,9 @@ jobs:
         run: "npm install"
         working-directory: ./angular
         
+      - name: "Test exit"
+        run: exit 1
+        
       - name: "Testing"
         run: "npm test -- --watch=false --browsers=ChromeHeadless"
         working-directory: ./angular
