--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,7 +64,7 @@ jobs:
       - name: "Get exec time"
         if: always()
         id: "get-time"
-        run: echo "::set-output name=time::$(gh run list --workflow ci.yaml | head -n 1 | awk -F'\t' '{print $8}')"
+        run: "echo \"::set-output name=time::createdAt=$(gh -R ${GITHUB_REPOSITORY}  run list \\ --json databaseId,createdAt --jq \".[]|select(.databaseId==${{ github.run_id }})|.createdAt\") usedSec=$(( `date +%s` - `date -d \"$createdAt\" +%s`  ))\""
           
       - name: Send mail
         if: always()
