--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,7 +63,9 @@ jobs:
       - name: "Get exec time"
         if: always()
         id: "get-time"
-        run: "echo \"::set-output name=time::$(( `date +%s` ))\""
+        run: echo \"::set-output name=time::createdAt=$(gh -R ${GITHUB_REPOSITORY}  run list \
+                                               --json databaseId,createdAt --jq ".[]|select(.databaseId==${{ github.run_id }})|.createdAt")\
+                                            usedSec=$(( `date +%s` - `date -d "$createdAt" +%s`  ))\"
           
       - name: Send mail
         if: always()
