--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,7 +67,7 @@ jobs:
       - name: "Get exec time"
         if: always()
         id: "get-time"
-        run: echo "::set-output name=time::$(( `date +%s` ))"
+        run: echo "::set-output name=time::$(( `date +%s` - ${{ steps.get-cur.outputs.time }} ))"
           
       - name: Send mail
         if: always()
@@ -80,6 +80,6 @@ jobs:
           subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
           body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} \
                 has ${{ job.status }} and executed in \
-                (${{ steps.get-time.outputs.time }} - ${{ steps.get-cur.outputs.time }}) sec
+                ${{ steps.get-time.outputs.time }} sec
           to: verdenart@gmail.com
           from: Test Task
